ui: removed fixed width for main header logo
Logo can be both CaaSP or Kubic now and the fixed width was causing a
small misalignment with Kubic logo. Turns out that this fixed width is
not necessary at all.

fix#kubic-logo

--- a/app/assets/stylesheets/components/header.scss
+++ b/app/assets/stylesheets/components/header.scss
@@ -33,7 +33,6 @@ $velum-navbar-toggle-color: white;
 
   .navbar-brand,
   img {
-    width: 235.5px;
     height: 60px;
     padding: 0;
   }
